--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -23,7 +24,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
