--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.6",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0"
