--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
-    "next": "15.1.6",
+    "next": "^15.1.6",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
