--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
     "next": "^15.1.6",
