--- a/package.json
+++ b/package.json
@@ -9,21 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/forms": "^0.5.10",
     "@types/nodemailer": "^6.4.17",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
+    "crypto": "^1.0.1",
+    "cva": "^0.0.0",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.40.0",
     "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
     "next": "^15.1.6",
     "nodemailer": "^6.10.0",
+    "postgres": "^3.4.5",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
+    "recharts": "^2.15.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.2"
   },
@@ -33,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
