--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "private": true,
   "scripts": {
     "predev": "node -e \"require('fs').existsSync('./public/uploads') || require('fs').mkdirSync('./public/uploads', { recursive: true })\"",
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
     "prebuild": "node -e \"require('fs').existsSync('./public/uploads') || require('fs').mkdirSync('./public/uploads', { recursive: true })\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "setup": "node -e \"require('fs').existsSync('./public/uploads') || require('fs').mkdirSync('./public/uploads', { recursive: true })\""
+    "setup": "node -e \"require('fs').existsSync('./public/uploads') || require('fs').mkdirSync('./public/uploads', { recursive: true })\"",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx ./src/lib/db/migrations.ts",
+    "db:studio": "drizzle-kit studio",
+    "db:push": "drizzle-kit push",
+    "db:seed": "tsx ./src/lib/db/migrate.ts seed"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/forms": "^0.5.10",
     "@types/nodemailer": "^6.4.17",
@@ -26,7 +35,7 @@
     "crypto": "^1.0.1",
     "cva": "^0.0.0",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.40.0",
+    "drizzle-orm": "^0.40.1",
     "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
     "next": "^15.1.6",
@@ -42,6 +51,7 @@
     "remark-gfm": "^4.0.0",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^2.6.0",
+    "tsx": "^4.19.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -50,7 +60,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.30.5",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
