feat: Add CV section to navbar and implement CV data handling
- Updated navbar to include a link to the CV section.
- Created a new file for CV data management with mock data for experience, education, skills, certifications, and projects.
- Implemented functions to retrieve CV data from both mock data and database.
- Added mock certifications and projects data for a student profile.
- Developed a PDF generator for exporting CVs with customizable options.
- Defined types for CV data structure to ensure type safety across the application.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.1",
     "framer-motion": "^12.0.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.473.0",
     "next": "^15.1.6",
     "nodemailer": "^6.10.0",
