--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "framer-motion": "^12.0.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.473.0",
-    "next": "^15.1.6",
+    "next": "^15.3.1",
     "nodemailer": "^6.10.0",
     "postgres": "^3.4.5",
     "prism-react-renderer": "^2.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-markdown": "^9.0.3",
     "recharts": "^2.15.1",
     "rehype-raw": "^7.0.0",
@@ -58,8 +58,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
