--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,12 @@
 
 # misc
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 *.pem
 
 # debug
@@ -32,6 +38,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
 
 # vercel
 .vercel
@@ -44,3 +51,13 @@ next-env.d.ts
 /public/uploads/*
 !public/uploads/.gitkeep
 !public/uploads/profile.jpg
+
+# Supabase
+.branches
+.temp
+
+# Editors
+.idea/
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
