--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/forms": "^0.5.10",
     "@types/nodemailer": "^6.4.17",
+    "@upstash/redis": "^1.34.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
-    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "cva": "^0.0.0",
-    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.40.1",
     "framer-motion": "^12.0.1",
     "jspdf": "^3.0.1",
@@ -52,7 +52,7 @@
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^2.6.0",
     "tsx": "^4.19.4",
-    "zod": "^3.24.2"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -60,6 +60,7 @@
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
+    "dotenv": "^16.5.0",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
