--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "db:studio": "drizzle-kit studio",
     "db:push": "drizzle-kit push",
     "db:seed": "tsx ./src/lib/db/migrate.ts seed",
+    "db:apply-rls": "tsx ./scripts/apply-rls-policies.ts",
+    "db:verify": "tsx ./scripts/verify-schema.ts",
     "migrate:posts": "tsx ./scripts/migrate-posts-to-supabase.ts"
   },
   "dependencies": {
