--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "db:seed": "tsx ./src/lib/db/migrate.ts seed",
     "db:apply-rls": "tsx ./scripts/apply-rls-policies.ts",
     "db:verify": "tsx ./scripts/verify-schema.ts",
-    "migrate:posts": "tsx ./scripts/migrate-posts-to-supabase.ts"
+    "migrate:posts": "tsx ./scripts/migrate-posts-to-supabase.ts",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@faker-js/faker": "^9.7.0",
@@ -27,49 +28,52 @@
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.39.6",
     "@tailwindcss/forms": "^0.5.10",
-    "@types/nodemailer": "^6.4.17",
-    "@upstash/redis": "^1.34.8",
+    "@types/nodemailer": "^6.4.14",
+    "@upstash/redis": "^1.28.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "crypto-js": "^4.2.0",
     "cva": "^0.0.0",
-    "drizzle-orm": "^0.40.1",
-    "framer-motion": "^12.0.1",
+    "drizzle-orm": "^0.29.4",
+    "framer-motion": "^11.0.6",
     "jspdf": "^3.0.1",
-    "lucide-react": "^0.473.0",
+    "lucide-react": "^0.331.0",
     "next": "^15.3.1",
-    "nodemailer": "^6.10.0",
-    "postgres": "^3.4.5",
-    "prism-react-renderer": "^2.4.1",
+    "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.10",
+    "postgres": "^3.4.3",
+    "prism-react-renderer": "^2.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-markdown": "^9.0.3",
-    "recharts": "^2.15.1",
+    "react-intersection-observer": "^9.8.0",
+    "react-markdown": "^9.0.1",
+    "recharts": "^2.12.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "shadcn-ui": "^0.9.5",
-    "tailwind-merge": "^2.6.0",
-    "tsx": "^4.19.4",
-    "zod": "^3.24.3"
+    "tailwind-merge": "^2.2.1",
+    "tsx": "^4.7.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/typography": "^0.5.16",
+    "@next/bundle-analyzer": "^15.3.1",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
-    "dotenv": "^16.5.0",
-    "drizzle-kit": "^0.30.6",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
-    "postcss-import": "^16.1.0",
-    "postcss-nesting": "^13.0.1",
-    "tailwindcss": "^3.4.17",
+    "postcss-import": "^16.0.1",
+    "postcss-nesting": "^12.0.2",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
