--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "@types/nodemailer": "^6.4.14",
     "@upstash/redis": "^1.28.4",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "crypto-js": "^4.2.0",
     "cva": "^0.0.0",
-    "drizzle-orm": "^0.29.4",
+    "drizzle-orm": "^0.43.1",
     "framer-motion": "^11.0.6",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.331.0",
@@ -54,6 +55,7 @@
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "server-only": "^0.0.1",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^2.2.1",
     "tsx": "^4.7.1",
@@ -66,8 +68,8 @@
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
-    "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.20.14",
+    "dotenv": "^16.5.0",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
