feat: add new SQL types and update database schema
- Created new ENUM types for certificate types and project statuses in 0001_lethal_machine_man.sql.
- Added a new snapshot file 0001_snapshot.json to reflect the updated database schema, including user profiles, users, blog categories, blog posts, and more.
- Updated _journal.json to include the new migration entry for 0001_lethal_machine_man.
- Modified package.json to change the seed script path.
- Updated paths.txt to include new SQL and snapshot files.
- Enhanced migration and seeding scripts to support SSL connections and improved error handling.
- Implemented checks for existing blog posts and categories before seeding to prevent duplicates.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "db:migrate": "tsx ./src/lib/db/migrations.ts",
     "db:studio": "drizzle-kit studio",
     "db:push": "drizzle-kit push",
-    "db:seed": "tsx ./src/lib/db/migrate.ts seed",
+    "db:seed": "tsx ./src/lib/db/seed.ts",
     "db:apply-rls": "tsx ./scripts/apply-rls-policies.ts",
     "db:verify": "tsx ./scripts/verify-schema.ts",
     "migrate:posts": "tsx ./scripts/migrate-posts-to-supabase.ts",
