--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.49.4",
-    "@tailwindcss/forms": "^0.5.10",
     "@types/nodemailer": "^6.4.14",
     "@upstash/redis": "^1.34.8",
     "class-variance-authority": "^0.7.1",
@@ -66,11 +65,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^15.3.1",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "^3.1.3",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
