--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "db:seed": "tsx ./src/lib/db/seed.ts",
     "db:apply-rls": "tsx ./scripts/apply-rls-policies.ts",
     "db:verify": "tsx ./scripts/verify-schema.ts",
+    "db:introspect": "drizzle-kit introspect",
+    "db:check": "npm run db:migrate && npm run db:verify && npm run db:seed",
+    "db:dump": "pg_dump -h aws-0-eu-central-1.pooler.supabase.com -U postgres.tnwbnlbmlqoxypsqdqii -d postgres > backup.sql",
     "migrate:posts": "tsx ./scripts/migrate-posts-to-supabase.ts",
     "analyze": "ANALYZE=true next build"
   },
@@ -72,6 +75,7 @@
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "@vitest/coverage-v8": "^3.1.3",
+    "colors": "^1.4.0",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
