fix(auth): handle optional email and improve error handling in session management
feat(cache): implement CacheService for advanced caching functionalities

fix(db): ensure database clients are initialized before use

feat(db): create DatabaseService for managing database connections

refactor(db): simplify database connection handling and improve error messages

fix(api): ensure APIError details are always initialized

refactor(api): enhance ApiResponse structure for better error handling

feat(errors): introduce AppError class hierarchy for consistent error management

fix(types): update blog and project types for better null handling

chore(tsconfig): update TypeScript configuration for stricter type checks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "ES2022",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -8,7 +8,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -20,7 +20,19 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": false, // Αλλαγή σε false για να μη μπλοκάρουν μεταβλητές που δεν χρησιμοποιούνται
+    "noUnusedParameters": false, // Αλλαγή σε false για να μη μπλοκάρουν παράμετροι που δεν χρησιμοποιούνται
+    "strictNullChecks": true,
+    /* 
+      Απενεργοποίηση του exactOptionalPropertyTypes προσωρινά για να διορθωθούν τα σφάλματα
+      Μπορεί να ενεργοποιηθεί ξανά αφού ενημερωθούν όλοι οι τύποι της εφαρμογής
+    */
+    "exactOptionalPropertyTypes": false,
+    "baseUrl": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
