--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "next start",
     "lint": "next lint",
     "setup": "node -e \"require('fs').existsSync('./public/uploads') || require('fs').mkdirSync('./public/uploads', { recursive: true })\"",
+    
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx ./src/lib/db/migrations.ts",
     "db:studio": "drizzle-kit studio",
@@ -32,33 +33,36 @@
     "db:check": "npm run db:migrate && npm run db:verify && npm run db:seed",
     "db:dump": "pg_dump -h aws-0-eu-central-1.pooler.supabase.com -U postgres.tnwbnlbmlqoxypsqdqii -d postgres > backup.sql",
     "migrate:posts": "tsx ./scripts/migrate-posts-to-supabase.ts",
-    "analyze": "ANALYZE=true next build"
+    
+    "analyze": "ANALYZE=true next build",
+    "performance": "tsx scripts/performance-check.ts",
+    "bundle-size": "npm run build && npx bundlesize",
+    "db:health": "tsx scripts/database-health.ts",
+    "deps:check": "depcheck",
+    "clean": "rm -rf .next out dist",
+    "clean:install": "rm -rf node_modules package-lock.json && npm install",
+    "type-check": "tsc --noEmit",
+    "build:prod": "npm run clean && npm run build"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.7.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.8",
     "@types/nodemailer": "^6.4.14",
     "@upstash/redis": "^1.34.8",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "critters": "^0.0.23",
     "crypto-js": "^4.2.0",
     "cva": "^0.0.0",
     "drizzle-orm": "^0.43.1",
-    "framer-motion": "^11.18.2",
-    "helmet": "^8.1.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.331.0",
     "next": "^15.3.1",
-    "next-themes": "^0.2.1",
     "nodemailer": "^6.9.10",
     "postgres": "^3.4.5",
     "prism-react-renderer": "^2.3.1",
@@ -66,7 +70,6 @@
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.8.0",
     "react-markdown": "^9.0.1",
-    "recharts": "^2.12.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
@@ -83,21 +86,46 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/glob": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "@vitest/coverage-v8": "^3.1.3",
+    "chalk": "^5.4.1",
     "colors": "^1.4.0",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "glob": "^11.0.2",
     "msw": "^2.7.5",
     "postcss": "^8",
     "postcss-import": "^16.0.1",
     "postcss-nesting": "^12.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "vitest": "^3.1.2"
-  }
+    "vitest": "^3.1.2",
+    
+    "@faker-js/faker": "^9.7.0",
+    "framer-motion": "^11.18.2",
+    "recharts": "^2.12.1",
+    "critters": "^0.0.23",
+    "helmet": "^8.1.0",
+    "depcheck": "^1.4.7",
+    "bundlesize": "^0.18.2",
+    "cors": "^2.8.5",
+    "next-themes": "^0.2.1"
+  },
+  "bundlesize": [
+    {
+      "path": ".next/static/js/*.js",
+      "maxSize": "250kb",
+      "compression": "gzip"
+    },
+    {
+      "path": ".next/static/css/*.css",
+      "maxSize": "30kb",
+      "compression": "gzip"  
+    }
+  ]
 }
