--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "start": "next start",
     "lint": "next lint",
     "setup": "node -e \"require('fs').existsSync('./public/uploads') || require('fs').mkdirSync('./public/uploads', { recursive: true })\"",
-    
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx ./src/lib/db/migrations.ts",
     "db:studio": "drizzle-kit studio",
@@ -33,7 +32,6 @@
     "db:check": "npm run db:migrate && npm run db:verify && npm run db:seed",
     "db:dump": "pg_dump -h aws-0-eu-central-1.pooler.supabase.com -U postgres.tnwbnlbmlqoxypsqdqii -d postgres > backup.sql",
     "migrate:posts": "tsx ./scripts/migrate-posts-to-supabase.ts",
-    
     "analyze": "ANALYZE=true next build",
     "performance": "tsx scripts/performance-check.ts",
     "bundle-size": "npm run build && npx bundlesize",
@@ -82,6 +80,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@faker-js/faker": "^9.7.0",
     "@next/bundle-analyzer": "^15.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
@@ -91,30 +90,28 @@
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "@vitest/coverage-v8": "^3.1.3",
+    "bundlesize": "^0.18.2",
     "chalk": "^5.4.1",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "critters": "^0.0.23",
+    "depcheck": "^1.4.7",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "framer-motion": "^11.18.2",
     "glob": "^11.0.2",
+    "helmet": "^8.1.0",
     "msw": "^2.7.5",
+    "next-themes": "^0.2.1",
     "postcss": "^8",
     "postcss-import": "^16.0.1",
     "postcss-nesting": "^12.0.2",
+    "recharts": "^2.12.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "vitest": "^3.1.2",
-    
-    "@faker-js/faker": "^9.7.0",
-    "framer-motion": "^11.18.2",
-    "recharts": "^2.12.1",
-    "critters": "^0.0.23",
-    "helmet": "^8.1.0",
-    "depcheck": "^1.4.7",
-    "bundlesize": "^0.18.2",
-    "cors": "^2.8.5",
-    "next-themes": "^0.2.1"
+    "vitest": "^3.1.2"
   },
   "bundlesize": [
     {
@@ -125,7 +122,7 @@
     {
       "path": ".next/static/css/*.css",
       "maxSize": "30kb",
-      "compression": "gzip"  
+      "compression": "gzip"
     }
   ]
 }
