feat: add two-factor authentication setup and user settings components
- Implemented TwoFactorSetup component for managing 2FA setup and verification.
- Created UserSettings component to manage user profile and security settings.
- Added functionality to enable/disable 2FA and handle user profile updates.
- Introduced view count tracking for blog posts in the blog repository.
- Added utility functions for blog content processing, including reading time calculation and slug generation.
- Enhanced blog schema to include views and reading time fields.
- Implemented admin authentication check for secure API access.
- Added emergency unlock functionality for user accounts.

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "cva": "^0.0.0",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.8.2",
