refactor: remove blog-related code and types
- Deleted blog service and utility files to streamline the codebase.
- Removed blog-related hooks and API functions.
- Updated access control to eliminate blog permissions.
- Cleaned up unused blog utility functions and types.
- Adjusted project types to reflect new status terminology.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "dompurify": "^3.2.6",
     "jsdom": "^26.1.0",
     "jspdf": "^3.0.3",
